RESOLVED FIXED313211
[iOS] MediaPlayer volume is not propagated to MediaDeviceRoute
https://bugs.webkit.org/show_bug.cgi?id=313211
Summary [iOS] MediaPlayer volume is not propagated to MediaDeviceRoute
Andy Estes
Reported 2026-04-23 21:35:53 PDT
SSIA
Attachments
Andy Estes
Comment 1 2026-04-23 21:35:54 PDT
Andy Estes
Comment 2 2026-04-23 21:37:46 PDT
EWS
Comment 3 2026-04-24 10:48:23 PDT
Committed 311967@main (86805bf658f7): <https://commits.webkit.org/311967@main> Reviewed commits have been landed. Closing PR #63506 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.