[iOS] MediaPlayer volume is not propagated to MediaDeviceRoute https://bugs.webkit.org/show_bug.cgi?id=313211 rdar://174340256

Reviewed by Eric Carlson.

When a wireless playback media player's volume changes (and volume is not locked), that change
should be propagated to its corresponding MediaDeviceRoute.

Tests: media/wireless-playback-media-player/volume-locked.html
       media/wireless-playback-media-player/volume.html

* LayoutTests/media/wireless-playback-media-player/volume-expected.txt: Added.
* LayoutTests/media/wireless-playback-media-player/volume-locked-expected.txt: Added.
* LayoutTests/media/wireless-playback-media-player/volume-locked.html: Added.
* LayoutTests/media/wireless-playback-media-player/volume.html: Added.
* Source/WebCore/platform/graphics/MediaPlayerPrivateWirelessPlayback.cpp:
(WebCore::MediaPlayerPrivateWirelessPlayback::setVolumeLocked):
(WebCore::MediaPlayerPrivateWirelessPlayback::setVolume):
(WebCore::MediaPlayerPrivateWirelessPlayback::volume const):
* Source/WebCore/platform/graphics/MediaPlayerPrivateWirelessPlayback.h:
* Source/WebCore/testing/MockMediaDeviceRoute.h:
* Source/WebCore/testing/MockMediaDeviceRoute.idl:
* Source/WebCore/testing/MockMediaDeviceRoute.mm:
(WebCore::MockMediaDeviceRoute::volume const):
(WebCore::MockMediaDeviceRoute::setVolume):

Canonical link: https://commits.webkit.org/311967@main